can now enter the editor ui

--- a/Src/rainstormConfig.toml
+++ b/Src/rainstormConfig.toml
@@ -1,3 +1,9 @@
 [[recent_projects]]
 name = "112"
 path = "D:\\Dev\\Test"
+[[recent_projects]]
+name = "112"
+path = "D:\\Dev\\Test"
+[[recent_projects]]
+name = "112"
+path = "D:\\Dev\\Test"
