--- a/Src/rainstormConfig.toml
+++ b/Src/rainstormConfig.toml
@@ -1,6 +1,3 @@
 [[recent_projects]]
-name = "11"
-path = "D:\\Dev\\Test"
-[[recent_projects]]
-name = "22"
-path = "D:\\Dev\\Test"
+name = "MyNewProject"
+path = "D:\\Dev\\Test\\MyNewProject.rainstorm"
