--- a/Src/rainstormConfig.toml
+++ b/Src/rainstormConfig.toml
@@ -1,3 +1,3 @@
 [[recent_projects]]
-name = "MyNewProject"
-path = "D:\\Dev\\Test\\MyNewProject.rainstorm"
+name = "ss"
+path = "D:\\Dev\\Test\\ss.rainstorm"
